RefatoraçAo visando melhorias na performance, uso de virtual threads e ConcurrentHashMap